# knowledge-bases-rs

./: Cargo.toml  README.md
src/: document_loader.rs  embedding.rs  main.rs  qdrant_store.rs  retriever.rs  vector_store.rs
